--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 </div>
 <div class="card mt-5 border-success mx-auto">
     <div class="card-body">
-        <p class="d-inline mr-5 text-left">Player Score: <span id="playerScores" class="d-inline">0</span></p>
-        <p class="d-inline mr-5 text-center">Bot Score: <span id="botScores" class="d-inline">0</span></p>
+        <p class="d-inline mr-4 align-middle text-left">Player Score: <span id="playerScores" class="d-inline">0</span></p>
+        <p class="d-inline mr-4 align-middle text-center">Bot Score: <span id="botScores" class="d-inline">0</span></p>
         <button class="btn btn-outline-success float-right" id="resetBtn">Reset Scores</button>
 </div>
 
